force-app/main/default/objects/Paymentt__c/Paymentt__c.object-meta.xml
<CustomObject>
    <label>Paymentt</label>
    <nameField>
        <displayFormat>PAY-{00000}</displayFormat>
        <label>Paymentt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paymentts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>