force-app/main/default/objects/Paymentt__c/fields/Invoicee__c.field-meta.xml
<CustomField>
    <fullName>Invoicee__c</fullName>
    <label>Invoicee</label>
    <referenceTo>Invoicee__c</referenceTo>
    <relationshipLabel>Paymentts</relationshipLabel>
    <relationshipName>Paymentts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>