force-app/main/default/objects/Paymentt__c/validationRules/Cancelled_Payment_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Payment_Notes_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Payment_Status__c, &quot;Cancelled&quot;),
    ISBLANK(Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>Please provide Notes explaining why the payment was cancelled</errorMessage>
</ValidationRule>