force-app/main/default/objects/Paymentt__c/validationRules/Completed_Payment_Reference_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Payment_Reference_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Payment_Status__c, "Completed"),
    OR(
        ISPICKVAL(Payment_Method__c, "UPI"),
        ISPICKVAL(Payment_Method__c, "Credit Card"),
        ISPICKVAL(Payment_Method__c, "Debit Card"),
        ISPICKVAL(Payment_Method__c, "Bank Transfer")
    ),
    ISBLANK(Transaction_Reference__c)
)</errorConditionFormula>
    <errorDisplayField>Transaction_Reference__c</errorDisplayField>
    <errorMessage>Transaction Reference is required for completed digital payments (UPI, Credit Card, Debit Card, Bank Transfer)</errorMessage>
</ValidationRule>