force-app/main/default/objects/Paymentt__c/validationRules/Digital_Payment_Reference_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Digital_Payment_Reference_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Payment_Method__c, &quot;UPI&quot;),
        ISPICKVAL(Payment_Method__c, &quot;Credit Card&quot;),
        ISPICKVAL(Payment_Method__c, &quot;Debit Card&quot;),
        ISPICKVAL(Payment_Method__c, &quot;Bank Transfer&quot;)
    ),
    ISBLANK(Transaction_Reference__c)
)</errorConditionFormula>
    <errorDisplayField>Transaction_Reference__c</errorDisplayField>
    <errorMessage>Transaction Reference is required for digital payments</errorMessage>
</ValidationRule>