force-app/main/default/objects/Paymentt__c/validationRules/Payment_Amount_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>Payment_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Payment_Amount__c</errorDisplayField>
    <errorMessage>Payment Amount must be greater than zero</errorMessage>
</ValidationRule>