force-app/main/default/objects/Paymentt__c/validationRules/Payment_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Payment_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Payment_Date__c</errorDisplayField>
    <errorMessage>Payment Date cannot be in future</errorMessage>
</ValidationRule>