force-app/main/default/objects/Paymentt__c/validationRules/Refunded_Payment_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Refunded_Payment_Notes_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Payment_Status__c, &quot;Refunded&quot;),
    ISBLANK(Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>Please provide Notes explaining the refunded payment.</errorMessage>
</ValidationRule>